--- a/scripts/debug.ipynb
+++ b/scripts/debug.ipynb
@@ -1,6 +1,43 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Debugging Stock Price Prediction Models\n",
+    "## Overview\n",
+    "This notebook focuses on validating, analyzing, and retraining XGBoost models used for stock price prediction in the Nextock project. It covers the following tasks:\n",
+    "\n",
+    "1. Loading validation metrics for both XGBoost and ARIMA models.\n",
+    "2. Visualizing model performance using bar plots for key evaluation metrics.\n",
+    "3. Detecting outliers in validation metrics using the Interquartile Range (IQR) method.\n",
+    "4. Identifying problematic tickers where the XGBoost model underperforms.\n",
+    "5. Retraining XGBoost models for the identified tickers and saving new predictions.\n",
+    "6. Comparing pre-retrain and post-retrain performance."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "### 1. Importing Dependencies\n",
+    "The necessary Python libraries are imported, including:\n",
+    "\n",
+    "NumPy & Pandas for data manipulation.\n",
+    "\n",
+    "XGBoost for training the stock price regression models.\n",
+    "\n",
+    "Matplotlib & Seaborn for data visualization.\n",
+    "\n",
+    "Scikit-learn for model evaluation.\n",
+    "\n",
+    "Optuna for hyperparameter tuning (though not used in this notebook).\n",
+    "\n",
+    "Pickle for saving and loading trained models."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 31,
    "metadata": {},
@@ -16,6 +53,23 @@
     "from sklearn.metrics import mean_absolute_error, mean_squared_error\n",
     "import optuna\n",
     "import pickle\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2. Loading Validation Metrics\n",
+    "Validation results for XGBoost and ARIMA models are stored in CSV files. The load_validations function:\n",
+    "\n",
+    "Reads validation data from the given directory.\n",
+    "Extracts key metrics (MAE, MSE, RMSE, MAPE) from the first row.\n",
+    "Returns a DataFrame summarizing model performance across tickers.\n",
+    "\n",
+    "#### Paths for Validation Files\n",
+    "XGBoost validations: D:/personal-projects/Nextock/xgboost_validations\n",
+    "\n",
+    "ARIMA validations: D:/personal-projects/Nextock/arima_validations"
    ]
   },
   {
@@ -55,6 +109,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3. Visualizing Model Performance\n",
+    "A bar plot is created for each metric (MAE, MSE, RMSE, MAPE) comparing:\n",
+    "\n",
+    "- XGBoost model performance across tickers.\n",
+    "- ARIMA model performance across tickers.\n",
+    "\n",
+    "Each plot displays the error metric on the y-axis and the stock ticker on the x-axis."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
@@ -85,6 +152,20 @@
     "\n",
     "plt.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4. Detecting Outliers in Model Performance\n",
+    "To identify stocks where the XGBoost model performs poorly:\n",
+    "\n",
+    "The Interquartile Range (IQR) method is used to detect outliers in validation metrics.\n",
+    "Stocks with error metrics significantly above the upper threshold are flagged as outliers.\n",
+    "\n",
+    "#### Output:\n",
+    "Lists of outliers for each metric in both XGBoost and ARIMA models."
    ]
   },
   {
@@ -146,6 +227,20 @@
     "predictions_path = r\"D:\\personal-projects\\Nextock\\xgboost_predictions\"\n",
     "validation_path = r\"D:\\personal-projects\\Nextock\\xgboost_validations\"\n",
     "data_path = r\"D:\\personal-projects\\Nextock\\preprocessed_data\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5. Investigating Problematic Tickers\n",
+    "A list of \"buggy tickers\" (poorly performing models) is defined:\n",
+    "\n",
+    "buggy_tickers = ['AAPL', 'CVX', 'WMT', 'GOOGL', 'MA', 'BAC', 'BP', 'C', 'NVDA', 'PFE']\n",
+    "\n",
+    "For each ticker:\n",
+    "- The actual vs. predicted close prices are plotted.\n",
+    "- The validation metrics are displayed in the console."
    ]
   },
   {
@@ -359,6 +454,30 @@
     "        print(\"\\n\" + \"-\"*50 + \"\\n\")\n",
     "    except Exception as e:\n",
     "        print(f\"Error loading validation for {ticker}: {e}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 6. Retraining XGBoost Models\n",
+    "For each buggy ticker, the model is retrained using the original dataset.\n",
+    "\n",
+    "#### Retraining Steps:\n",
+    "1. Load stock data from the preprocessed dataset (D:/personal-projects/Nextock/preprocessed_data).\n",
+    "2. Split into 80% training and 20% testing sets.\n",
+    "3. Train a new XGBoost model using:\n",
+    "300 trees, learning rate = 0.05, max depth = 6.\n",
+    "gpu_hist for faster training on GPU.\n",
+    "4. Save the new model, predictions, and validation results.\n",
+    "\n",
+    "#### Output Files Saved:\n",
+    "\n",
+    "**Model:** {ticker}_xgboost.pkl\n",
+    "\n",
+    "**Predictions:** {ticker}__xgboost_predictions.csv\n",
+    "\n",
+    "**Validation Metrics:** {ticker}_xgboost_validation.csv"
    ]
   },
   {
@@ -699,6 +818,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 7. Post-Retrain Performance Comparison\n",
+    "After retraining:\n",
+    "\n",
+    "- New validation metrics are printed for each ticker.\n",
+    "- Actual vs. retrained predictions are plotted to visualize improvements.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 34,
    "metadata": {},
@@ -782,6 +912,15 @@
     "        print(\"\\n\" + \"-\"*50 + \"\\n\")\n",
     "    except Exception as e:\n",
     "        print(f\"Error loading validation for {ticker}: {e}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 8. Visualizing Retrained Model Performance\n",
+    "A bar chart is generated for each evaluation metric (MAE, MSE, RMSE, MAPE) across all retrained tickers to compare the new model’s performance.\n",
+    "\n"
    ]
   },
   {
